--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -103,7 +103,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Continue shopping and checkout -->>
+                        <!-- Continue shopping and checkout -->
                         <div class="col{% if s %}-12 mt-2{% endif %}">
                             <a href="{% url 'products' %}" class="continue-shopping-button">
                                 <span class="product-detail text-uppercase mt-5">Continue Shopping</span>
