--- a/products/templates/products/includes/product_quantity_js.html
+++ b/products/templates/products/includes/product_quantity_js.html
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script>
 
     // Disable chevron buttons outside 1-10 range
     function handleEnableDisable(itemId) {
