--- a/products/templates/products/products_page.html
+++ b/products/templates/products/products_page.html
@@ -114,7 +114,7 @@
 
 <!-- Product filtering js script -->
 {% block postloadjs %}
-<script type="text/javascript">
+<script>
     $('#sort-selector').change(function() {
         var selector = $(this);
         var currentUrl = new URL(window.location);
