--- a/templates/base.html
+++ b/templates/base.html
@@ -147,7 +147,7 @@
         {% endblock %}
         <!-- Toast message JS -->
         {% block postloadjs %}
-            <script type="text/javascript">
+            <script>
                 $('.toast').toast('show');
             </script>
         {% endblock %}
