--- a/user_profile/templates/user_profile/user_profile.html
+++ b/user_profile/templates/user_profile/user_profile.html
@@ -68,7 +68,7 @@
 
 {% block postloadjs %}
     {{ block.super }}
-    <script type="text/javascript">
+    <script>
         let countrySelected = $('#id_default_country').val();
         if(!countrySelected) {
             $('#id_default_country').css('color', '##00000091');
