--- a/templates/includes/toast_notifications/toast_success.html
+++ b/templates/includes/toast_notifications/toast_success.html
@@ -7,7 +7,7 @@
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <div class="container-checkout"></div>
+    <div class="container-checkout">
     <div class="toast-body">
         <div class="row">
             <div class="col">
