--- a/user_profile/templates/user_profile/user_profile.html
+++ b/user_profile/templates/user_profile/user_profile.html
@@ -12,10 +12,10 @@
 {% block content %}
     <div class="profile-overlay"></div>
     <div class="container">
-        <!------------------ Page title ------------------>
+        <!-- Page title -->
         <div class="row">
             <div class="col">
-                <h2 class="page-title text-center"><p class="username">{{ user }}</p></h2>
+                <h2 class="page-title text-center">{{ user }}</h2>
                 <hr>
             </div>
         </div>
@@ -33,7 +33,7 @@
                 <div class="order-list col-12">
                     <p class="form-title">Your Order History</p>
                     <table class="order-history-table table-responsive">
-                        <div class="table table-sm">
+                        <table class="table table-sm">
                             <thead>
                                 <tr>
                                     <th style="color: #fafafa; font-weight: 100; padding-bottom: 10px;">Order</th>
@@ -59,7 +59,7 @@
                             {% endfor %}
                        
                             </tbody>
-                        </div>
+                        </table>
                     </table>
                 </div>
             </div>
