--- a/user_profile/templates/user_profile/user_profile.html
+++ b/user_profile/templates/user_profile/user_profile.html
@@ -32,8 +32,8 @@
                 <hr class="page-breaker">
                 <div class="order-list col-12">
                     <p class="form-title">Your Order History</p>
-                    <table class="order-history-table table-responsive">
-                        <table class="table table-sm">
+                    <div class="order-history-table">
+                        <table class="table table-sm table-responsive">
                             <thead>
                                 <tr>
                                     <th style="color: #fafafa; font-weight: 100; padding-bottom: 10px;">Order</th>
@@ -60,7 +60,7 @@
                        
                             </tbody>
                         </table>
-                    </table>
+                    </div>
                 </div>
             </div>
         </div>
