--- a/store_checkout/templates/store_checkout/checkout_done.html
+++ b/store_checkout/templates/store_checkout/checkout_done.html
@@ -5,6 +5,8 @@
     <div class="container header-container">
         <div class="row">
             <div class="col">
+                
+            </div>
         </div>
     </div>
 {% endblock %}
