--- a/user_profile/templates/user_profile/user_profile.html
+++ b/user_profile/templates/user_profile/user_profile.html
@@ -5,6 +5,8 @@
     <div class="container header-container">
         <div class="row">
             <div class="col">
+                
+            </div>
         </div>
     </div>
 {% endblock %}
