--- a/static/css/base.css
+++ b/static/css/base.css
@@ -469,6 +469,11 @@ span.bag-pop-checkout.text-uppercase {
     min-width: -webkit-fill-available;
 }
 
+.container-checkout {
+    background-color: #000;
+    color: #fafafa;
+}
+
 /*---------- Toast - cappers ----------*/
 
 .w-100.toast-capper.danger {
