--- a/templates/includes/toast_notifications/toast_success.html
+++ b/templates/includes/toast_notifications/toast_success.html
@@ -22,7 +22,7 @@
                 {% for item in bag_items %}
                     <div class="row">
                         <div class="col-3 my-1">
-                            <img class="w-100" src="{{ item.product.image.url }}">
+                            <img class="w-100" src="{{ item.product.image.url }}" alt="product image">
                         </div>
                         <div class="col-9">
                             <p class="pop-up-fields my-0">{{ item.product.name }}</p>
@@ -34,10 +34,10 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <strong><p class="mt-3 mb-1 text-white">
+                    <strong>
                         Total{% if free_delivery_delta > 0 %} (Exc. delivery){% endif %}: 
                         <span class="bag-total float-right">£{{ bag_total|floatformat:2 }}</span>
-                    </p></strong>
+                    </strong>
                     {% if free_delivery_delta > 0 %}
                         <p class="mb-0 p-2 text-center">
                             Spend <strong>£{{ free_delivery_delta }}</strong> more to get free next day delivery!
