--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -13,13 +13,13 @@
 
 {% block content %}
     <div class="checkout-overlay"></div>
-    <!-- Page title -->
     <div class="row">
         <div class="col-12 col-md-6">
             <h2 class="page-title text-center">Manage Your Entries</h2>
             <hr>
         </div>
     </div>
+    <div class="container-fluid add-product-container">
     <div class="row">
         <div class="col-12 col-md-6">
             <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
@@ -32,6 +32,7 @@
             </form>
         </div>
     </div>
+</div>
 </div>
 {% endblock %}
 
