--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -33,7 +33,7 @@
         <div class="dropdown-menu border-0" aria-labelledby="user-options-mobile">
             {% if request.user.is_authenticated %}
                 {% if request.user.is_superuser %}
-                    <a href="{% url 'account_logout' %}" class="dropdown-item">Manage your products</a>
+                    <a href="{% url 'add_product' %}" class="dropdown-item">Manage Products</a>
                 {% endif %}
                 <a href="{% url 'user_profile' %}" class="dropdown-item">Your Profile</a>
                 <a href="{% url 'account_logout' %}" class="dropdown-item">Account Logout</a>
