urls.py & views.py - added if/else statement to update_product to check form validation and produce confirmationmessages on success of edit, updated urls.py file due to syntax errors

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1016,8 +1016,9 @@ input#id_detail_02,
 input#id_detail_03,
 input#id_price,
 input#id_rating,
-input#id_image_url {
-    background: black;
+input#id_image_url,
+input#id_image {
+    background: transparent;
     color: #fafafa;
 }
 
