--- a/products/templates/products/products_page.html
+++ b/products/templates/products/products_page.html
@@ -85,8 +85,8 @@
                                 {% endif %}
                                 {% if request.user.is_superuser %}
                                     <small class="ml-3">
-                                        <a href="{% url 'update_product' product.id %}">Edit</a> |
-                                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                                        <a class="product-edit" href="{% url 'update_product' product.id %}">Edit</a> |
+                                        <a class="product-delete" href="{% url 'delete_product' product.id %}">Delete</a>
                                     </small>
                                 {% endif %}
                             </div>
