--- a/products/templates/products/products_page.html
+++ b/products/templates/products/products_page.html
@@ -75,7 +75,7 @@
                                             <small>No Rating</small>
                                         {% endif %}
                                         {% if request.user.is_superuser %}
-                                        <small class="ml-3">
+                                        <small>
                                             <a class="product-edit" href="{% url 'update_product' product.id %}">Edit</a> |
                                             <a class="product-delete" href="{% url 'delete_product' product.id %}">Delete</a>
                                         </small>
@@ -84,7 +84,7 @@
                                 </div>
                                 {% if product.category %}
                                 <div class="row">
-                                    <div class="col">
+                                    <div class="col card-category">
                                         {{ product.category.friendly_name }}
                                     </div>
                                 </div>
