--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -12,27 +12,26 @@
 {% endblock %}
 
 {% block content %}
-    <div class="checkout-overlay"></div>
+<div class="checkout-overlay"></div>
     <div class="row">
-        <div class="col-12 col-md-6">
-            <h2 class="page-title text-center">Manage Your Entries</h2>
-            <hr>
-        </div>
     </div>
     <div class="container-fluid add-product-container">
-    <div class="row">
-        <div class="col-12 col-md-6">
-            <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
-                {% csrf_token %}
-                {{ form | crispy }}
-                <div class="text-right">
-                    <a class="btn btn-outline-white rounded-0 text-white" href="{% url 'products' %}">Cancel</a>
-                    <button class="btn btn-black-outline-white rounded-0 text-white" type="submit">Add Product</button>
-                </div>
-            </form>
+        <div class="row">
+            <div class="col-12 col-md-6">
+                <h2 class="page-title text-center">Manage Your Entries</h2>
+                <hr>
+                <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ form | crispy }}
+                    <div class="text-right">
+                        <a class="btn btn-outline-white rounded-0 text-white" href="{% url 'products' %}">Cancel</a>
+                        <button class="btn btn-black-outline-white rounded-0 text-white" type="submit">Add
+                            Product</button>
+                    </div>
+                </form>
+            </div>
         </div>
     </div>
-</div>
 </div>
 {% endblock %}
 
