--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -17,8 +17,8 @@
     </div>
     <div class="container-fluid add-product-container">
         <div class="row">
-            <div class="col-12 col-md-6">
-                <h2 class="page-title text-center">Manage Your Entries</h2>
+            <div class="add-product-form col-12 col-md-6">
+                <h2 class="add-product-page-title text-center">Manage Your Entries</h2>
                 <hr>
                 <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
