--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1005,6 +1005,10 @@ button.allauth-button {
 
 
 /*--------------- Product admin ---------------*/
+.add-product-form.col-12.col-md-6 {
+    margin-left: auto;
+    margin-right: auto;
+}
 
 select#id_category,
 input#id_sku,
@@ -1212,5 +1216,20 @@ and (orientation:portrait) {
     }
     .header-container {
         padding-top: 164px;
+    }
+}
+
+/*--------------- iPad ---------------*/
+@media only screen 
+and (min-width: 768px)
+and (max-width: 1024px) {
+    h2.add-product-page-title.text-center {
+        margin-top: 45%;
+        letter-spacing: 1px;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 46px;
+        background-color: transparent;
+        color: #fafafa;
+        font-weight: lighter;
     }
 }
