--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1011,7 +1011,7 @@ button.allauth-button {
 }
 
 h2.add-product-page-title.text-center {
-    margin-top: 45%;
+    margin-top: 30px;
     letter-spacing: 1px;
     font-family: 'Montserrat', sans-serif;
     font-size: 46px;
