--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -14,14 +14,12 @@
 {% block content %}
     <div class="checkout-overlay"></div>
     <div class="row">
-        <div class="col-12 col-md-6">
-            <h2 class="page-title text-center">Edit Your Entries</h2>
-            <hr>
-        </div>
     </div>
     <div class="container-fluid add-product-container">
         <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="add-product-form col-12 col-md-6">
+                <h2 class="add-product-page-title text-center">Edit Your Entries</h2>
+                <hr>
                 <form method="POST" action="{% url 'update_product' product.id %}" class="form mb-2"
                     enctype="multipart/form-data">
                     {% csrf_token %}
