--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -12,13 +12,13 @@
 {% endblock %}
 
 {% block content %}
-<div class="checkout-overlay"></div>
+    <div class="checkout-overlay"></div>
     <div class="row">
     </div>
     <div class="container-fluid add-product-container">
         <div class="row">
             <div class="add-product-form col-12 col-md-6">
-                <h2 class="add-product-page-title text-center">Manage Your Entries</h2>
+                <h2 class="add-product-page-title text-center">New Product</h2>
                 <hr>
                 <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
