--- a/store_checkout/templates/store_checkout/checkout_form.html
+++ b/store_checkout/templates/store_checkout/checkout_form.html
@@ -42,9 +42,9 @@
                     <div class="col-2 mb-1">
                         <a href="{% url 'individual_product' item.product.id %}">
                             {% if item.product.image %}
-                                <img class="w-100" src="{{ item.product.image.url }}" alt="{{ product_name }}">
+                                <img class="image w-100" src="{{ item.product.image.url }}" alt="{{ product_name }}">
                             {% else %}
-                                <img class="w-100" src="{{ MEDIA_URL }}" alt="{{ product_name }}">
+                                <img class="image w-100" src="{{ MEDIA_URL }}" alt="{{ product_name }}">
                             {% endif %}
                         </a>
                     </div>
