--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1170,6 +1170,11 @@ and (max-width: 480px) {
         margin-left: 10px;
     }
 
+    .nav-link {
+        padding: 1px;
+        margin-right: 15px;
+    }
+
     .header-container {
         padding-top: 116px;
     }
@@ -1277,6 +1282,11 @@ and (-webkit-min-device-pixel-ratio: 2) {
     a#sales-link {
         margin-left: 10px;
     }
+
+    .nav-link {
+        padding: 1px;
+        margin-right: 15px;
+    }
 }
 
 /* iPhone 6, 7, 8 + */
@@ -1300,9 +1310,23 @@ and (-webkit-min-device-pixel-ratio: 3) {
         margin-left: 10px;
     }
 
+    .nav-link {
+        padding: 1px;
+        margin-right: 15px;
+    }
+
     /* search bar */
     .dropdown-menu.border-0.p-3.rounded-0.my-0.show {
         width: 100vw;
+    }
+
+    /* product details */
+    a.category-title {
+        font-size: 26px;
+    }
+
+    p.product_name.mb-0.text-capitalize {
+        font-size: 26px;
     }
 }
 
@@ -1332,10 +1356,24 @@ and (orientation:portrait) {
         margin-left: 10px;
     }
 
+    .nav-link {
+        padding: 1px;
+        margin-right: 15px;
+    }
+
     /* search bar */
     .dropdown-menu.border-0.p-3.rounded-0.my-0.show {
         width: 50% !important;
         margin-left: 50%;
+    }
+
+    /* product details */
+    select#id_product_size {
+        width: 36%;
+    }
+
+    p.product_name.mb-0.text-capitalize {
+        font-size: 24px;
     }
 
     /* Checkout page */
