--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1108,6 +1108,10 @@ and (max-width: 480px) {
         width: 315px;
     }
 
+    .header-container {
+        padding-top: 85px;
+    }
+
     /* Post checkout success styling */
 
     p.text-white.text-center {
@@ -1170,11 +1174,6 @@ and (max-width: 480px) {
         margin-left: 10px;
     }
 
-    .nav-link {
-        padding: 1px;
-        margin-right: 15px;
-    }
-
     .header-container {
         padding-top: 116px;
     }
@@ -1198,6 +1197,11 @@ and (max-width: 480px) {
         padding: .6rem .6rem;
         font-size: 1rem;
     }
+
+    button.navbar-toggler {
+        margin-left: 10px;
+    }
+
     #delivery-banner h4 {
         font-size: .9rem;
     }
@@ -1261,6 +1265,14 @@ and (max-width: 480px) {
         color: #f0f005;
         margin-left: 10px;
     }
+
+    a.category-title {
+        font-size: 23px;
+    }
+
+    a.category-title {
+        font-size: 20px;
+    }
 }
 
 /* iPhone 6,7,8 */
@@ -1273,6 +1285,10 @@ and (-webkit-min-device-pixel-ratio: 2) {
         margin-top: 15%;
     }
 
+    .header-container {
+        padding-top: 85px;
+    }
+
     a#home-link,
     a#all-products-link,
     a#home-link,
@@ -1283,9 +1299,12 @@ and (-webkit-min-device-pixel-ratio: 2) {
         margin-left: 10px;
     }
 
-    .nav-link {
-        padding: 1px;
-        margin-right: 15px;
+    button.navbar-toggler {
+        margin-left: 10px;
+    }
+
+    .details-container.mb-5.mt-md-5 {
+        margin-left: 5px;
     }
 }
 
@@ -1299,6 +1318,10 @@ and (-webkit-min-device-pixel-ratio: 3) {
         margin-top: 21%;
     }
 
+    .header-container {
+        padding-top: 85px;
+    }
+
     /* nav links */
     a#home-link,
     a#all-products-link,
@@ -1310,9 +1333,8 @@ and (-webkit-min-device-pixel-ratio: 3) {
         margin-left: 10px;
     }
 
-    .nav-link {
-        padding: 1px;
-        margin-right: 15px;
+    button.navbar-toggler {
+        margin-left: 10px;
     }
 
     /* search bar */
@@ -1327,6 +1349,10 @@ and (-webkit-min-device-pixel-ratio: 3) {
 
     p.product_name.mb-0.text-capitalize {
         font-size: 26px;
+    }
+
+    .details-container.mb-5.mt-md-5 {
+        margin-left: 5px;
     }
 }
 
@@ -1345,6 +1371,10 @@ and (orientation:portrait) {
         margin-top: 60%;
     }
 
+    .details-container.mb-5.mt-md-5 {
+        margin-left: 5px;
+    }
+
     /* nav links */
     a#home-link,
     a#all-products-link,
@@ -1356,9 +1386,8 @@ and (orientation:portrait) {
         margin-left: 10px;
     }
 
-    .nav-link {
-        padding: 1px;
-        margin-right: 15px;
+    button.navbar-toggler {
+        margin-left: 10px;
     }
 
     /* search bar */
