--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1233,9 +1233,14 @@ and (max-width: 480px) {
         color: #fafafa;
         border: 1px solid #fafafa;
         padding: 7px;
-        margin-top: 17px;
         margin-left: 7px;
         }
+    
+    /* shopping buton & add to bag */
+    span.product-detail.text-uppercase.mt-5,
+    input.btn.btn-black.text-uppercase {
+        font-size: 14px;
+    }
 
     /* Allauth */
 
