--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -38,8 +38,8 @@
                 <a href="{% url 'user_profile' %}" class="dropdown-item">Your Profile</a>
                 <a href="{% url 'account_logout' %}" class="dropdown-item">Account Logout</a>
             {% else %}
-                <a href="{% url 'account_signup' %}" class="dropdown-item">Account Register</a>
-                <a href="{% url 'account_login' %}" class="dropdown-item">Account Login</a>
+                <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
             {% endif %}
         </div>
     </li>
