Updated class for image in product detail to alow seperate styling to general products page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1429,7 +1429,7 @@ and (orientation:portrait) {
         width: 36%;
     }
 
-    .card-img-top {
+    .card-img-top.product-card {
         margin-left: 19px;
     }
 
