--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -32,11 +32,11 @@
             <div class="image-container my-5">
                 {% if product.image %}
                     <a href="{{ product.image.url }}" target="_blank">
-                        <img class="card-img-top" src="{{ product.image.url }}" alt="{{ product.name }}">
+                        <img class="card-img-top product-card" src="{{ product.image.url }}" alt="{{ product.name }}">
                     </a>
                     {% else %}
                     <a href="">
-                        <img class="card-img-top" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                        <img class="card-img-top product-card" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
                     </a>
                     {% endif %}
                 </div>
