--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1456,6 +1456,19 @@ and (orientation:portrait) {
         font-weight: lighter;
     }
 
+    /* toast */
+    span.bag-total.float-right {
+        float: right!important;
+        margin-right: 14px;
+        margin-left: 5px;
+        margin-bottom: 10px;
+        font-weight: 100;
+    }
+
+    .toast.show {
+        margin-right: 16px;
+    }
+
     /* allauth forms */
 
     .allauth-form-login-content {
